Fixing distorted icons

--- a/code/css/main.css
+++ b/code/css/main.css
@@ -128,7 +128,6 @@ h6 {
 
 .img_features{
   width: 88px;
-  height: 58px;
 }
 
 .animated-number:hover {
